--- a/BOOTSTRAP/css/Music-Estilos.css
+++ b/BOOTSTRAP/css/Music-Estilos.css
@@ -11,7 +11,7 @@
 .fondo-principal{
 	background:url(../IMG/Music-background.jpg);
 	background-repeat:no-repeat;
-	background-size:auto;
+	background-size:cover;
 	width:100%;
 }
 
@@ -32,8 +32,13 @@
 	margin-top:10px;
 }
 
+.info{
+	margin-top:30px;
+}
+
+
 h5{
-	font-size:24px;
+	font-size:34px;
 	color:white;
 	margin-top:10px;
 }
@@ -41,15 +46,8 @@ h5{
 p{
 	color:white;
 	font-size:14px;
-}
-
-.nav-design{
-	background:rgba(51,0,255,0.25);
-	min-height:50px;
-}
-
-li{
-	margin-top:8px;
+	text-align:justify;
+	margin-left:30px;
 }
 
 .img-logo{
@@ -59,9 +57,9 @@ li{
 	margin-right:5px;
 }
 
-aerosmith-img{
-	width:350px;
-	height:200px;
-	margin-top:20px;
-	margin-left:40px;
+.photo-info{
+	max-width:300px;
+	margin-top:30px;
+	margin-bottom:30px;
+	margin-left:30px;
 }
